--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "typeRoots": [
       "./@types",
       "./node_modules/@types",
-      "./node_modules/@ctrl/plex/dist"
+      "./node_modules/figma-api/lib"
     ],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
